# Additive-Synthesizer

./: README.md
MiniMoog/: CMakeLists.txt  keyboard.c  keyboard.h  minimoog.c  minimoog.h  ptask.c  ptask.h  shared.h  signal_src.c  signal_src.h  task_configs.h  timemng.c  timemng.h  ui.c  ui.h
